--- a/pages/coccion.html
+++ b/pages/coccion.html
@@ -100,11 +100,11 @@
         <div class="secciones_footer">
             <ul class="ul">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="coccion.html">Cocción</a></li>
-                <li><a href="comprar.html">Comprar</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
+                <li><a href="../pages/coccion.html">Cocción</a></li>
+                <li><a href="../pages/comprar.html">Comprar</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </footer>
