--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
         </div>
         <div class="secciones_footer">
             <ul class="ul">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/pages/productos.html">Productos</a></li>
-                <li><a href="/pages/coccion.html">Cocción</a></li>
-                <li><a href="/pages/comprar.html">Comprar</a></li>
-                <li><a href="/pages/nosotros.html">Nosotros</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./pages/productos.html">Productos</a></li>
+                <li><a href="./pages/coccion.html">Cocción</a></li>
+                <li><a href="./pages/comprar.html">Comprar</a></li>
+                <li><a href="./pages/nosotros.html">Nosotros</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </footer>
