--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,8 @@
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo" alt="logo rebozaditos"></a>
+            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo"
+                    alt="logo rebozaditos"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -52,59 +53,53 @@
         <section class="contactate">
             <h2>¡COMUNICATE CON NOSOTROS <br> MEDIANTE WHATSAPP!</h2>
         </section>
-        <section class="nombre_apellido">
-            <h2>¡CONTACTANOS!</h2>
-            <form action="#">
-                <div class="nombresexo">
-                    <div class="nombreetc">
-                        <label for="text">
-                            <input type="nombre" placeholder="Nombre">
-                        </label>
-                        <label for="text">
-                            <input type="apellido" placeholder="Apellido">
-                        </label>
-                        <br>
-                        <label for="text">
-                            <input type="text" placeholder="E-mail">
-                        </label>
-                        <label for="edad">
-                            <input type="date" placeholder="Edad">
-                        </label>
-                    </div>
-                    <div class="sexo">
-                        <h2>SEXO</h2>
-                        <div>Hombre
-                            <input type="radio" name="lado" value="izquierda">
-                        </div>
-                        <div>Mujer
-                            <input type="radio" name="lado" value="derecha">
-                        </div>
-                        <div>Sin especificar
-                            <input type="radio" name="lado" value="izquierda">
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </section>
-
         <section class="globo_texto">
-            <h2>¡Dejanos tu comentario!</h2>
-            <form action="">
+            <form action="https://formspree.io/f/xknybkbd" method="POST">
 
-                <label for="Mensaje">
-                    <textarea name="gggg" id="" cols="40" rows="8" placeholder="Mensaje"></textarea>
+                <section class="nombre_apellido">
+                    <h2>¡CONTACTANOS!</h2>
+
+                    <div class="nombresexo">
+                        <div class="nombreetc">
+                            <label for="text">
+                                <input type="nombre" name="message" placeholder="Nombre">
+                            </label>
+                            <label for="text">
+                                <input type="apellido" name="message" placeholder="Apellido">
+                            </label>
+                            <br>
+                            <label for="text">
+                                <input type="text" name="message" placeholder="E-mail">
+                            </label>
+                            <label for="edad">
+                                <input type="date" name="message" placeholder="Edad">
+                            </label>
+                        </div>
+
+                    </div>
+
+                </section>
+                <h2>¡Dejanos tu comentario!</h2>
+
+                <section class="globo2">
+                <label for="Mensaje" class="labeltexto">
+                    <h4>INGRESÁ TU EMAIL</h4>
+                    <input type="email" class="mail" placeholder="Email:" name="email">
+                    <textarea name="message" class="areatexto" id="" cols="40" rows="8"
+                        placeholder="Mensaje"></textarea>
                 </label>
                 <br>
                 <div class="enviar">
                     <input type="reset" value="ELIMINAR">
                     <input type="submit" value="ENVIAR">
                 </div>
+            </section>
 
             </form>
         </section>
         <section class="mail_wp">
-            <h2 class="mail">Email <span>rebozaditosmayorista@gmail.com</span></h2>
-            <h2 class="wp">WhatsApp <span>11-5347-2817</span></h2>
+            <!-- <h2 class="mail">Email <span>rebozaditosmayorista@gmail.com</span></h2> -->
+            <h2 class="wp">WhatsApp <br> <span>11-5347-2817</span></h2>
         </section>
     </main>
 
@@ -117,11 +112,11 @@
         <div class="secciones_footer">
             <ul class="ul">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="coccion.html">Cocción</a></li>
-                <li><a href="comprar.html">Comprar</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
+                <li><a href="../pages/coccion.html">Cocción</a></li>
+                <li><a href="../pages/comprar.html">Comprar</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </footer>
