--- a/pages/productos.html
+++ b/pages/productos.html
@@ -30,12 +30,12 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="coccion.html">Cocción</a></li>
-                    <li><a href="comprar.html">Comprar</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
+                <li><a href="../pages/coccion.html">Cocción</a></li>
+                <li><a href="../pages/comprar.html">Comprar</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -66,19 +66,19 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/image/bastoncitos.jpg" alt="Los Angeles">
+                        <img src="../image/bastoncitos.jpg" alt="Los Angeles">
                         <div class="carousel-caption">
                             <h3>BASTONCITOS DE MOZZARELLA</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/image/bolitas-cheddar.jpg" alt="Chicago">
+                        <img src="../image/bolitas-cheddar.jpg" alt="Chicago">
                         <div class="carousel-caption">
                             <h3>BOLITAS DE CHEDDAR</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="/image/foto11.jpg" alt="New York">
+                        <img src="../image/foto11.jpg" alt="New York">
                         <div class="carousel-caption">
                             <h3>BASTONES DE MOZZARELLA</h3>
                         </div>
@@ -154,11 +154,11 @@
         <div class="secciones_footer">
             <ul class="ul">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="coccion.html">Cocción</a></li>
-                <li><a href="comprar.html">Comprar</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
+                <li><a href="../pages/coccion.html">Cocción</a></li>
+                <li><a href="../pages/comprar.html">Comprar</a></li>
+                <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </footer>
