--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/productos.html">Productos</a></li>
-                    <li><a href="pages/coccion.html">Cocción</a></li>
+                    <li><a href="pages/coccion.html">Cocciónnn</a></li>
                     <li><a href="pages/comprar.html">Comprar</a></li>
                     <li><a href="pages/nosotros.html">Nosotros</a></li>
                     <li><a href="pages/contacto.html">Contacto</a></li>
