se agrega proyecto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,9 +71,9 @@
                             <label for="text">
                                 <input type="text" name="message" placeholder="E-mail">
                             </label>
-                            <label for="edad">
+                            <!-- <label for="edad">
                                 <input type="date" name="message" placeholder="Edad">
-                            </label>
+                            </label> -->
                         </div>
 
                     </div>
@@ -85,7 +85,7 @@
                 <label for="Mensaje" class="labeltexto">
                     <h4>INGRESÁ TU EMAIL</h4>
                     <input type="email" class="mail" placeholder="Email:" name="email">
-                    <textarea name="message" class="areatexto" id="" cols="40" rows="8"
+                    <textarea name="message" class="areatexto" id="" cols="30" rows="8"
                         placeholder="Mensaje"></textarea>
                 </label>
                 <br>
