--- a/pages/coccion.html
+++ b/pages/coccion.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- head -->
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rebozaditos te ofrece los pasos necesarios para que puedas cocinar nuestros productos a la perfección.">
     <meta name="keywords" content="pasos, freir, fritura, rebozado, freir correctamente">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
+    <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
-    <title>Cocción</title>
+    <!-- titulo -->
+    <title>Rebozaditos - Cocción</title>
 </head>
-
+<!-- body -->
 <body class="container_coccion">
     <header class="header">
 
@@ -30,7 +36,6 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="coccion.html">Cocción</a></li>
                     <li><a href="comprar.html">Comprar</a></li>
@@ -40,7 +45,7 @@
             </div>
         </nav>
     </header>
-
+<!-- main -->
     <main class="main">
         <section class="hero">
             <div class="foto_coccion">
@@ -57,40 +62,40 @@
             <p>¡Siguiendo los siguientes pasos vas a poder cocinar nuestros productos perfectamente!</p>
         </section>
 
-        <section class="fondo_freir">
-            <div class="fondo_freir2">
-                <section class="freir_1">
+        <section class="coccion">
+            
+                <section class="coccion-container">
                     <div class="jumbotron">
                         <h2>PASO 1</h2>
                         <p>Colocar el alimento en la sarten, unicamente cuando el aceite esté a la temperatura correcta
                             (180°aprox.).</p>
                     </div>
                 </section>
-                <section class="freir_2">
+                <section class="coccion-container">
                     <div class="jumbotron">
                         <h2>PASO 2</h2>
                         <p>¿Cómo se si el aceite esta a la temperatura correcta? Podemos probar echando miguitas de pan
                             o pan rallado, y si hace burbujitas ya esta listo, luego ir regulando el aceite.</p>
                     </div>
                 </section>
-                <section class="freir_3">
+                <section class="coccion-container">
                     <div class="jumbotron">
                         <h2>PASO 3</h2>
                         <p>Hay que tener en cuenta de que el alimento quede cubierto completamente por el
                             aceite.</p>
                     </div>
                 </section>
-                <section class="freir_4">
+                <section class="coccion-container">
                     <div class="jumbotron">
                         <h2>PASO 4</h2>
                         <p>Luego de sumergir el alimento, lo dejamos aproximadamente 1 minuto y ya estará listo.</p>
                         </p>
                     </div>
                 </section>
-            </div>
+            
         </section>
     </main>
-
+<!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
@@ -109,6 +114,7 @@
         </div>
     </footer>
 </body>
+<!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
