--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- head -->
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingresá, conocé y adquirí nuestros productos de la manera más fácil.">
     <meta name="keywords" content="cpmprar, comida, bastones, mozzarella, rebozados, congelados">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
+    <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
-    <title>Comprar</title>
+    <!-- titulo -->
+    <title>Rebozaditos - Comprar</title>
 </head>
-
+<!-- body -->
 <body class="contenedor_comprar">
     <header class="header">
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo" alt="logo rebozaditos"></a>
+            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo"
+                    alt="logo rebozaditos"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -29,7 +36,6 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="coccion.html">Cocción</a></li>
                     <li><a href="comprar.html">Comprar</a></li>
@@ -39,7 +45,7 @@
             </div>
         </nav>
     </header>
-
+    <!-- main -->
     <main class="main">
         <section class="hero">
             <div class="foto_comprar">
@@ -53,25 +59,22 @@
         </section>
         <section class="fondo_comprar">
             <div class="pasos_comprar">
-                <section class="comprar_1">
+                <section class="pasos">
                     <h2>PASO 1</h2>
                     <p>Ir a la sección contacto</p>
                 </section>
-                <section class="comprar_2">
+                <section class="pasos">
                     <h2>PASO 2</h2>
                     <p>Completar todos los datos.</p>
                 </section>
-                <section class="comprar_3">
+                <section class="pasos">
                     <h2>PASO 3</h2>
                     <p>Hacer el pedido al numero de WhatsApp que aparece en dicha sección.</p>
                 </section>
             </div>
-            <section class="boton-contacto">
-                <a href="../pages/contacto.html">CONTACTO</a>
-            </section>
         </section>
     </main>
-
+    <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
@@ -90,10 +93,12 @@
         </div>
     </footer>
 </body>
+<!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
     crossorigin="anonymous"></script>
+
 </html>
