--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- head -->
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En esta sección vas a poder conocer que es Rebozaditos y todos sus porpósitos!">
     <meta name="keywords" content="rebozaditos, visión, misión, porpósito">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
+    <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
-    <title>Nosotros</title>
+    <!-- titulo -->
+    <title>Rebozaditos - Nosotros</title>
 </head>
 
+<!-- body -->
 <body class="contenedor_nosotros">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo" alt="logo rebozaditos"></a>
+            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo"
+                    alt="logo rebozaditos"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -31,7 +38,6 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="coccion.html">Cocción</a></li>
                     <li><a href="comprar.html">Comprar</a></li>
@@ -41,7 +47,7 @@
             </div>
         </nav>
     </header>
-
+    <!-- main -->
     <main class="main">
         <section class="hero">
             <div class="foto_nosotros">
@@ -56,26 +62,26 @@
                     MINORISTA Y MAYORISTA,</span> ABASTECIENDO BARES, CERVECERIAS,
                 DISTRIBUIDORAS, COMERCIOS<span> Y MUCHO MÁS!</span></h3>
         </section>
-        <section class="proposito">
+        <section class="nosotros">
             <h2 class="h2_nosotros">PROPÓSITO</h2>
             <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
                 inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
                 cupiditate provident corrupti, blanditiis mollitia sunt.</p>
         </section>
-        <section class="mision">
+        <section class="nosotros">
             <h2 class="h2_nosotros">MISIÓN</h2>
             <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
                 inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
                 cupiditate provident corrupti, blanditiis mollitia sunt.</p>
         </section>
-        <section class="vision">
+        <section class="nosotros">
             <h2 class="h2_nosotros">VISIÓN</h2>
             <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
                 inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
                 cupiditate provident corrupti, blanditiis mollitia sunt.</p>
         </section>
     </main>
-
+    <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
@@ -94,6 +100,7 @@
         </div>
     </footer>
 </body>
+<!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
