--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- head -->
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingresá y contactanos para poder comprar.">
     <meta name="keywords" content="rebozados, minorista, mayorista, comida, envios, formas de pago">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
+    <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
-    <title>Contacto</title>
+    <!-- titulo -->
+    <title>Rebozaditos - Contacto</title>
 </head>
-
+<!-- body -->
 <body class="contenedor_contacto">
     <header class="header">
 
@@ -31,7 +37,6 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="coccion.html">Cocción</a></li>
                     <li><a href="comprar.html">Comprar</a></li>
@@ -41,7 +46,7 @@
             </div>
         </nav>
     </header>
-
+    <!-- main -->
     <main class="main">
         <section class="hero">
             <div class="foto_contacto">
@@ -67,33 +72,27 @@
                             <label for="text">
                                 <input type="apellido" name="message" placeholder="Apellido">
                             </label>
-                            <br>
-                            <label for="text">
-                                <input type="text" name="message" placeholder="E-mail">
-                            </label>
-                            <!-- <label for="edad">
-                                <input type="date" name="message" placeholder="Edad">
-                            </label> -->
                         </div>
 
                     </div>
 
                 </section>
+
                 <h2>¡Dejanos tu comentario!</h2>
 
                 <section class="globo2">
-                <label for="Mensaje" class="labeltexto">
-                    <h4>INGRESÁ TU EMAIL</h4>
-                    <input type="email" class="mail" placeholder="Email:" name="email">
-                    <textarea name="message" class="areatexto" id="" cols="30" rows="8"
-                        placeholder="Mensaje"></textarea>
-                </label>
-                <br>
-                <div class="enviar">
-                    <input type="reset" value="ELIMINAR">
-                    <input type="submit" value="ENVIAR">
-                </div>
-            </section>
+                    <label for="Mensaje" class="labeltexto">
+                        <h4>INGRESÁ TU EMAIL</h4>
+                        <input type="email" class="mail" placeholder="Email:" name="email">
+                        <textarea name="message" class="areatexto" id="" cols="30" rows="8"
+                            placeholder="Mensaje"></textarea>
+                    </label>
+                    <br>
+                    <div class="enviar">
+                        <input type="reset" value="ELIMINAR">
+                        <input type="submit" value="ENVIAR">
+                    </div>
+                </section>
 
             </form>
         </section>
@@ -102,7 +101,7 @@
             <h2 class="wp">WhatsApp <br> <span>11-5347-2817</span></h2>
         </section>
     </main>
-
+    <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
@@ -121,6 +120,7 @@
         </div>
     </footer>
 </body>
+<!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
