--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<!-- head -->
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingresá y conocé todos nuestros productos de una excelente calidad!">
     <meta name="keywords" content="bastones de mozzarella, cheddar, rebozados, congelados, fritura">
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
+    <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
+    <!-- css -->
     <link rel="stylesheet" href="../scss/style.css">
-    <title>Productos</title>
+    <!-- titulo -->
+    <title>Rebozaditos - Productos</title>
 </head>
 
+<!-- body -->
 <body class="contenedor_productos">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo" alt="logo rebozaditos"></a>
+            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo"
+                    alt="logo rebozaditos"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,17 +38,16 @@
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../pages/productos.html">Productos</a></li>
-                <li><a href="../pages/coccion.html">Cocción</a></li>
-                <li><a href="../pages/comprar.html">Comprar</a></li>
-                <li><a href="../pages/nosotros.html">Nosotros</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
+                    <li><a href="../pages/productos.html">Productos</a></li>
+                    <li><a href="../pages/coccion.html">Cocción</a></li>
+                    <li><a href="../pages/comprar.html">Comprar</a></li>
+                    <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
+    <!-- main -->
     <main class="main">
 
         <section class="hero">
@@ -66,19 +73,19 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../image/bastoncitos.jpg" alt="Los Angeles">
+                        <img src="../image/bastoncitos.jpg" alt="Bastoncitos de mozzarella" height="300">
                         <div class="carousel-caption">
                             <h3>BASTONCITOS DE MOZZARELLA</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../image/bolitas-cheddar.jpg" alt="Chicago">
+                        <img src="../image/bolitas-cheddar.jpg" alt="bolitas de cheddar" height="300">
                         <div class="carousel-caption">
                             <h3>BOLITAS DE CHEDDAR</h3>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../image/foto11.jpg" alt="New York">
+                        <img src="../image/foto11.jpg" alt="bastones de mozzarella" height="300">
                         <div class="carousel-caption">
                             <h3>BASTONES DE MOZZARELLA</h3>
                         </div>
@@ -94,9 +101,9 @@
                 </a>
             </div>
         </div>
-        <section class="productos1">
-            <section class="cheddar">
-                <div class="jumbotron"></div>
+        <section class="productos">
+            <section class="producto">
+                <div class="jumbotron1"></div>
                 <div class="texto">
                     <h2>BOCADITOS DE CHEDDAR</h2>
                     <h3>PRESENTACIÓN</h3>
@@ -105,9 +112,8 @@
                     <p>Por kg 30 unidades aprox.</p>
                 </div>
             </section>
-            <section class="baston">
-                <div class="jumbotron">
-                </div>
+            <section class="producto">
+                <div class="jumbotron2"></div>
                 <div class="texto">
                     <h2>BASTONES DE MOZZARELLA</h2>
                     <h3>PRESENTACIÓN</h3>
@@ -116,12 +122,9 @@
                     <p>Por kg 20 unidades aprox.</p>
                 </div>
             </section>
-        </section>
-        <section class="productos2">
-
-            <section class="bolitas">
-                <div class="jumbotron">
-                </div>
+            <br>
+            <section class="producto">
+                <div class="jumbotron3"></div>
                 <div class="texto">
                     <h2>BOLITAS DE CHEDDAR</h2>
                     <h3>PRESENTACIÓN</h3>
@@ -130,9 +133,8 @@
                     <p>Por kg 40 unidades aprox.</p>
                 </div>
             </section>
-            <section class="bastoncitos">
-                <div class="jumbotron">
-                </div>
+            <section class="producto">
+                <div class="jumbotron4"></div>
                 <div class="texto">
                     <h2>BASTONCITOS DE MOZZARELLA</h2>
                     <h3>PRESENTACIÓN</h3>
@@ -141,10 +143,10 @@
                     <p>Por kg 30 unidades aprox.</p>
                 </div>
             </section>
-
+        </section>
         </section>
     </main>
-
+    <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
@@ -163,6 +165,7 @@
         </div>
     </footer>
 </body>
+<!-- bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
