se entrega proyecto

--- a/pages/coccion.html
+++ b/pages/coccion.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <!-- head -->
+
 <head>
     <!-- meta -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rebozaditos te ofrece los pasos necesarios para que puedas cocinar nuestros productos a la perfección.">
+    <meta name="description"
+        content="Rebozaditos te ofrece los pasos necesarios para que puedas cocinar nuestros productos a la perfección.">
     <meta name="keywords" content="pasos, freir, fritura, rebozado, freir correctamente">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- favicon -->
     <link rel="shortcut icon" href="/image/logorebomini.png">
     <!-- css -->
@@ -21,12 +23,14 @@
     <title>Rebozaditos - Cocción</title>
 </head>
 <!-- body -->
+
 <body class="container_coccion">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo" alt="logo rebozaditos"></a>
+            <a href="../index.html"><img src="../image/logorebo.png" width="120" class="logo"
+                    alt="logo rebozaditos"></a>
 
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -45,7 +49,7 @@
             </div>
         </nav>
     </header>
-<!-- main -->
+    <!-- main -->
     <main class="main">
         <section class="hero">
             <div class="foto_coccion">
@@ -63,39 +67,39 @@
         </section>
 
         <section class="coccion">
-            
-                <section class="coccion-container">
-                    <div class="jumbotron">
-                        <h2>PASO 1</h2>
-                        <p>Colocar el alimento en la sarten, unicamente cuando el aceite esté a la temperatura correcta
-                            (180°aprox.).</p>
-                    </div>
-                </section>
-                <section class="coccion-container">
-                    <div class="jumbotron">
-                        <h2>PASO 2</h2>
-                        <p>¿Cómo se si el aceite esta a la temperatura correcta? Podemos probar echando miguitas de pan
-                            o pan rallado, y si hace burbujitas ya esta listo, luego ir regulando el aceite.</p>
-                    </div>
-                </section>
-                <section class="coccion-container">
-                    <div class="jumbotron">
-                        <h2>PASO 3</h2>
-                        <p>Hay que tener en cuenta de que el alimento quede cubierto completamente por el
-                            aceite.</p>
-                    </div>
-                </section>
-                <section class="coccion-container">
-                    <div class="jumbotron">
-                        <h2>PASO 4</h2>
-                        <p>Luego de sumergir el alimento, lo dejamos aproximadamente 1 minuto y ya estará listo.</p>
-                        </p>
-                    </div>
-                </section>
-            
+
+            <section class="coccion-container">
+                <div class="jumbotron">
+                    <h2>PASO 1</h2>
+                    <p>Colocar el alimento en la sarten, unicamente cuando el aceite esté a la temperatura correcta
+                        (180°aprox.).</p>
+                </div>
+            </section>
+            <section class="coccion-container">
+                <div class="jumbotron">
+                    <h2>PASO 2</h2>
+                    <p>¿Cómo se si el aceite esta a la temperatura correcta? Podemos probar echando miguitas de pan
+                        o pan rallado, y si hace burbujitas ya esta listo, luego ir regulando el aceite.</p>
+                </div>
+            </section>
+            <section class="coccion-container">
+                <div class="jumbotron">
+                    <h2>PASO 3</h2>
+                    <p>Hay que tener en cuenta de que el alimento quede cubierto completamente por el
+                        aceite.</p>
+                </div>
+            </section>
+            <section class="coccion-container">
+                <div class="jumbotron">
+                    <h2>PASO 4</h2>
+                    <p>Luego de sumergir el alimento, lo dejamos aproximadamente 1 minuto y ya estará listo.</p>
+                    </p>
+                </div>
+            </section>
+
         </section>
     </main>
-<!-- footer -->
+    <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
