se agrega proyecto

--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingresá, conocé y adquirí nuestros productos de la manera más fácil.">
-    <meta name="keywords" content="cpmprar, comida, bastones, mozzarella, rebozados, congelados">
+    <meta name="keywords"
+        content="comprar, comida, bastones, mozzarella, rebozados, congelados, bastones de mozzarella, cheddar">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -23,7 +24,7 @@
 </head>
 <!-- body -->
 
-<body class="contenedor_comprar">
+<body class="contenedor">
     <header class="header">
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
@@ -53,6 +54,7 @@
             <div class="foto_comprar">
                 <div class="texto_hero">
                     <h1>¡TE EXPLICAMOS<br>COMO COMPRAR!</h1>
+                    <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
                 </div>
             </div>
         </section>
@@ -75,13 +77,23 @@
                 </section>
             </div>
         </section>
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -94,13 +106,13 @@
             </ul>
         </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
