--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Sitio oficial de Rebozaditos. Ingresá para conocer nuestros productos a base de mozzarella, cheddar y más!">
-    <meta name="keywords" content="rebozados, minorista, mayorista, comida, envios, formas de pago">
+        content="Sitio oficial de Rebozaditos. Ingresá para conocer nuestros productos rebozados y congelados a base de mozzarella, cheddar y más!">
+    <meta name="keywords"
+        content="mozzarella , cheddar, rebozados, minorista de productos congelados, mayorista de productos congelados, comida, bastones de mozzarella fritos, envio">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -107,10 +108,10 @@
                 </a>
 
             </div>
+
         </section>
 
         <section class="info-main">
-
             <div class="envio-pago">
                 <div class="jumbotron">
                     <div class="foto-envio">
@@ -131,13 +132,23 @@
                 </div>
             </div>
         </section>
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -151,13 +162,13 @@
         </div>
     </footer>
     <script src="/scripts.js"></script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
