--- a/pages/coccion.html
+++ b/pages/coccion.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Rebozaditos te ofrece los pasos necesarios para que puedas cocinar nuestros productos a la perfección.">
-    <meta name="keywords" content="pasos, freir, fritura, rebozado, freir correctamente">
+    <meta name="description" content="Rebozaditos te explica como freir nuestros productos a la perfección.">
+    <meta name="keywords"
+        content="pasos, freir, fritura, rebozado, freir correctamente, como hacer bastones de mozzarella fritos">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -24,7 +24,7 @@
 </head>
 <!-- body -->
 
-<body class="container_coccion">
+<body class="contenedor">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -54,7 +54,7 @@
         <section class="hero">
             <div class="foto_coccion">
                 <div class="texto_hero">
-                    <h1>¡CÓMO COCINAR<br>NUESTROS PRODUCTOS! </h1>
+                    <h1>¿CÓMO FREIR<br>NUESTROS PRODUCTOS? </h1>
                     <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
                     <!-- <button class="boton_hero"><a href="">CONOCÉ MÁS</a></button> -->
                 </div>
@@ -71,15 +71,16 @@
             <section class="coccion-container">
                 <div class="jumbotron">
                     <h2>PASO 1</h2>
-                    <p>Colocar el alimento en la sarten, unicamente cuando el aceite esté a la temperatura correcta
+                    <p>Colocar el alimento en la sarten, únicamente cuando el aceite esté a la temperatura correcta
                         (180°aprox.).</p>
                 </div>
             </section>
             <section class="coccion-container">
                 <div class="jumbotron">
                     <h2>PASO 2</h2>
-                    <p>¿Cómo se si el aceite esta a la temperatura correcta? Podemos probar echando miguitas de pan
-                        o pan rallado, y si hace burbujitas ya esta listo, luego ir regulando el aceite.</p>
+                    <p>¿Cómo sé si el aceite esta a la temperatura correcta? Podemos probar echando miguitas de pan
+                        o pan rallado, y si hace burbujitas ya está listo, luego ir regulando la temperatura del el
+                        aceite.</p>
                 </div>
             </section>
             <section class="coccion-container">
@@ -92,19 +93,28 @@
             <section class="coccion-container">
                 <div class="jumbotron">
                     <h2>PASO 4</h2>
-                    <p>Luego de sumergir el alimento, lo dejamos aproximadamente 1 minuto y ya estará listo.</p>
+                    <p>Luego de sumergir el alimento, lo dejamos aproximadamente 1 o 2 minutos y ya estará listo.</p>
                     </p>
                 </div>
             </section>
-
+        </section>
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
         </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -117,13 +127,13 @@
             </ul>
         </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
