--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ingresá y contactanos para poder comprar.">
-    <meta name="keywords" content="rebozados, minorista, mayorista, comida, envios, formas de pago">
+    <meta name="keywords"
+        content="rebozados, minorista, mayorista, comida, envios, formas de pago, comprar, bastones de mozzarella, congelados">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -23,7 +24,7 @@
 </head>
 <!-- body -->
 
-<body class="contenedor_contacto">
+<body class="contenedor">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -54,6 +55,7 @@
             <div class="foto_contacto">
                 <div class="texto_hero">
                     <h1>¡CONTACTATE<br>CON NOSOTROS!</h1>
+                    <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
                 </div>
             </div>
         </section>
@@ -80,35 +82,52 @@
 
                 </section>
 
-                <h2>¡Dejanos tu comentario!</h2>
+
 
                 <section class="globo2">
-                    <label for="Mensaje" class="labeltexto">
+
+                    <div for="Mensaje" class="labeltexto">
+                        <h2>¡Dejanos tu comentario!</h2>
                         <h4>INGRESÁ TU EMAIL</h4>
                         <input type="email" class="mail" placeholder="Email:" name="email">
                         <textarea name="message" class="areatexto" id="" cols="30" rows="8"
                             placeholder="Mensaje"></textarea>
-                    </label>
-                    <br>
-                    <div class="enviar">
-                        <input type="reset" value="ELIMINAR">
-                        <input type="submit" value="ENVIAR">
+                        <br>
+                        <div class="enviar">
+                            <input type="reset" value="ELIMINAR">
+                            <input type="submit" value="ENVIAR">
+                        </div>
                     </div>
+
+                    <section class="mail_wp">
+                        <h3 class="wp"><i class="fa-brands fa-whatsapp"></i>11-5347-2817</h3>
+                        <h3 class="wp"><i class="fa-solid fa-envelope"></i>rebozaditosmayorista@gmail.com</h3>
+                        <h3 class="wp"><i class="fa-solid fa-location-dot"></i>Lomas del mirador, La Matanza</h3>
+                    </section>
                 </section>
+
 
             </form>
         </section>
-        <section class="mail_wp">
-            <!-- <h2 class="mail">Email <span>rebozaditosmayorista@gmail.com</span></h2> -->
-            <h2 class="wp">WhatsApp <br> <span>11-5347-2817</span></h2>
+
+
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
         </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -121,13 +140,13 @@
             </ul>
         </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
