--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,7 +24,7 @@
 
 <!-- body -->
 
-<body class="contenedor_nosotros">
+<body class="contenedor">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -55,14 +55,15 @@
             <div class="foto_nosotros">
                 <div class="texto_hero">
                     <h1>¿QUIÉNES<br>SOMOS?</h1>
+                    <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
                 </div>
             </div>
         </section>
 
         <section class="quienes_somos">
-            <h3><span>FABRICAMOS Y VENDEMOS PRODUCTOS REBOZADOS Y COGELADOS.</span> NOS DEDICAMOS A LA VENTA<span>
-                    MINORISTA Y MAYORISTA,</span> ABASTECIENDO BARES, CERVECERIAS,
-                DISTRIBUIDORAS, COMERCIOS<span> Y MUCHO MÁS!</span></h3>
+            <h3><span>FABRICAMOS Y VENDEMOS PRODUCTOS REBOZADOS Y CONGELADOS. NOS DEDICAMOS A LA VENTA
+                    MINORISTA Y MAYORISTA,</span> ABASTECIENDO BARES, CERVECERÍAS,
+                DISTRIBUIDORAS, COMERCIOS Y MUCHO MÁS!</span></h3>
         </section>
         <section class="nosotros">
             <h2 class="h2_nosotros">PROPÓSITO</h2>
@@ -82,13 +83,23 @@
                 inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
                 cupiditate provident corrupti, blanditiis mollitia sunt.</p>
         </section>
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -101,13 +112,13 @@
             </ul>
         </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
