--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,8 +7,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ingresá y conocé todos nuestros productos de una excelente calidad!">
-    <meta name="keywords" content="bastones de mozzarella, cheddar, rebozados, congelados, fritura">
+    <meta name="description"
+        content="Ingresá y conocé todos nuestros productos rebozados a base de mozzarella y cheddar">
+    <meta name="keywords"
+        content="bastones de mozzarella, cheddar, rebozados, congelados, fritura, bastones, bocaditos">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/88027d82b5.js" crossorigin="anonymous"></script>
     <!-- bootstrap -->
@@ -24,7 +26,7 @@
 
 <!-- body -->
 
-<body class="contenedor_productos">
+<body class="contenedor">
     <header class="header">
 
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -55,9 +57,8 @@
         <section class="hero">
             <div class="foto_productos">
                 <div class="texto_hero">
-                    <h1>¡CONOCÉ<br>NUESTROS <br> PRODUCTOS! </h1>
+                    <h1>¡CONOCÉ<br>NUESTROS <br> PRODUCTOS <br> REBOZADOS!</h1>
                     <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
-                    <button class="boton_hero"><a href="">CONOCÉ MÁS</a></button>
                 </div>
             </div>
         </section>
@@ -146,14 +147,23 @@
                 </div>
             </section>
         </section>
+        <section class="botones-fijos">
+            <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+            </div>
+            <div class="wp_fijo"><a
+                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
         </section>
     </main>
     <!-- footer -->
     <footer class="footer">
         <div class="redes">
             <p>SEGUINOS</p>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -166,13 +176,13 @@
             </ul>
         </div>
     </footer>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+        crossorigin="anonymous"></script>
 </body>
-<!-- bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-    crossorigin="anonymous"></script>
 
 </html>
