--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="texto_hero">
                     <h1>REBOZADITOS<br>MAYORISTA </h1>
                     <h2>PRODUCTOS CONGELADOS Y REBOZADOS</h2>
-                    <!-- <button class="boton_hero"><a href="">CONOCÉ MÁS</a></button> -->
+
                 </div>
             </div>
         </section>
@@ -159,6 +159,9 @@
                 <li><a href="./pages/nosotros.html">Nosotros</a></li>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
+        <div class="copy">
+            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
         </div>
     </footer>
     <script src="/scripts.js"></script>
