--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -75,7 +75,11 @@
                     <h2>PASO 3</h2>
                     <p>Hacer el pedido al numero de WhatsApp que aparece en dicha sección.</p>
                 </section>
+                <div class="boton-comprar">
+                    <a href="../pages/contacto.html"><h3>IR A CONTACTO</h3></a>
+                </div>
             </div>
+            
         </section>
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
@@ -104,6 +108,9 @@
                 <li><a href="../pages/nosotros.html">Nosotros</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
+        <div class="copy">
+            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
         </div>
     </footer>
     <!-- bootstrap -->
