--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -139,6 +139,9 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
+        <div class="copy">
+            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
+        </div>
     </footer>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
