--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -59,29 +59,41 @@
                 </div>
             </div>
         </section>
-
         <section class="quienes_somos">
             <h3><span>FABRICAMOS Y VENDEMOS PRODUCTOS REBOZADOS Y CONGELADOS. NOS DEDICAMOS A LA VENTA
                     MINORISTA Y MAYORISTA,</span> ABASTECIENDO BARES, CERVECERÍAS,
                 DISTRIBUIDORAS, COMERCIOS Y MUCHO MÁS!</span></h3>
         </section>
-        <section class="nosotros">
-            <h2 class="h2_nosotros">PROPÓSITO</h2>
-            <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
-                inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
-                cupiditate provident corrupti, blanditiis mollitia sunt.</p>
-        </section>
-        <section class="nosotros">
-            <h2 class="h2_nosotros">MISIÓN</h2>
-            <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
-                inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
-                cupiditate provident corrupti, blanditiis mollitia sunt.</p>
-        </section>
-        <section class="nosotros">
-            <h2 class="h2_nosotros">VISIÓN</h2>
-            <p class="pasos_p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores dolor
-                inventore error officiis quam tempore maiores, at dolorum accusantium aperiam, illum laudantium quasi
-                cupiditate provident corrupti, blanditiis mollitia sunt.</p>
+        <section class="nosotros1">
+            <div class="nosotros2">
+            <section class="nosotros">
+                <h2 class="h2_nosotros">• PROPÓSITO</h2>
+                <p class="pasos_p">Nuestro propósito como empresa proveedora de alimentos es otorgar distintos valores, calidad, unión y satisfacción hacia todos nuestros consumidores.</p>
+            </section>
+            <section class="nosotros">
+                <h2 class="h2_nosotros">• MISIÓN</h2>
+                <p class="pasos_p">Nuestro objetivo es crear un producto que marque la diferencia en el mercado potencial y que sea accesible para nuestro cliente objetivo.</p>
+            </section>
+            <section class="nosotros">
+                <h2 class="h2_nosotros">• VISIÓN</h2>
+                <p class="pasos_p">Nuestra visión es crecer con Rebozaditos fabricando productos que la gente disfrute mientras contribuimos con el bienestar de nuestros consumidores.</p>
+            </section>
+        </div>
+            <section class="card-deck2">
+                <div class="card gal-nos">
+                    <div class="card-body1 text-center">
+                    </div>
+                </div>
+                <div class="card gal-nos">
+                    <div class="card-body2 text-center">
+                    </div>
+                </div>
+                <div class="card gal-nos">
+                    <div class="card-body3 text-center">
+
+                    </div>
+                </div>
+            </section>
         </section>
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
@@ -94,6 +106,7 @@
     </main>
     <!-- footer -->
     <footer class="footer">
+        
         <div class="redes">
             <p>SEGUINOS</p>
             <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
@@ -110,6 +123,9 @@
                 <li><a href="../pages/nosotros.html">Nosotros</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
+        <div class="copy">
+            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
         </div>
     </footer>
     <!-- bootstrap -->
