--- a/pages/productos.html
+++ b/pages/productos.html
@@ -53,7 +53,6 @@
     </header>
     <!-- main -->
     <main class="main">
-
         <section class="hero">
             <div class="foto_productos">
                 <div class="texto_hero">
@@ -62,8 +61,10 @@
                 </div>
             </div>
         </section>
-
-        <div class="carrusel_productos">
+        <section class="titulos-prod">
+            <h3>¡PRODUCTOS FABRICADOS ARTESANALMENTE!</h3>
+        </section>
+        <section class="carrusel_productos">
             <div id="demo" class="carousel slide" data-ride="carousel">
 
                 <!-- Indicators -->
@@ -103,7 +104,8 @@
                     <span class="carousel-control-next-icon"></span>
                 </a>
             </div>
-        </div>
+        </section>
+
         <section class="productos">
             <section class="producto">
                 <div class="jumbotron1"></div>
@@ -174,6 +176,9 @@
                 <li><a href="../pages/nosotros.html">Nosotros</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
+        </div>
+        <div class="copy">
+            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
         </div>
     </footer>
     <!-- bootstrap -->
