--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -98,9 +98,8 @@
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
             </div>
-            <div class="wp_fijo"><a
-                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
-                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <div class="wp_fijo"><a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </section>
     </main>
