--- a/pages/productos.html
+++ b/pages/productos.html
@@ -152,9 +152,8 @@
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
             </div>
-            <div class="wp_fijo"><a
-                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
-                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <div class="wp_fijo"><a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </section>
     </main>
@@ -164,8 +163,8 @@
             <p>SEGUINOS</p>
             <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
-                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
