--- a/pages/coccion.html
+++ b/pages/coccion.html
@@ -129,9 +129,8 @@
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
             </div>
-            <div class="wp_fijo"><a
-                    href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
-                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <div class="wp_fijo"><a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </section>
 
@@ -142,8 +141,8 @@
             <p>SEGUINOS</p>
             <a href="https://www.instagram.com/rebozaditosmayorista/?hl=es" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/1153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
-                target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+                    target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
         <div class="secciones_footer">
             <ul class="ul">
@@ -155,9 +154,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
-        <div class="copy">
-            <h3> ©2022 Rebozaditos - Derechos reservados por CopyRight</h3>
-        </div>
+        
     </footer>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
