--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -114,7 +114,7 @@
         <section class="botones-fijos">
             <div class="subir"><a href="#"><i class="fa-solid fa-chevron-up"></i></a>
             </div>
-            <a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
+            <div class="wp_fijo"><a href="https://wa.me/+5401153472817?text=¡Hola%20Rebozaditos!%20Quisiera%20más%20información."
                 target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </section>
